# zk-tool

./: .gitmodules  README.md
contracts_example/test/: README.md  code.c
contracts_example/vote/: README.md  code.c
lib/: ourcontract.h
ourcontract_modify/: libourcontract.c  ourcontract.h
src/: CMakeLists.txt  ourzklib.cpp
src/python_utils/: generate_sha256_gadget_tests.py
src/test/: README.md  test_libsnark.cpp
src/vote/: README.md  generate_sha256_gadget_tests.py  offline_proof.cpp  online_verify.cpp  trusted_setup.cpp  utils.cpp  utils.hpp
